# the-regional-manager

./: README.md  api.py  pyproject.toml
assets/: the-regional-manager-demo.mov
