[project]
name = "fastapi-copilot-ext"
version = "0.1.0"
description = "GitHub Copilot Extension Agent example w/ FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "pydantic>=2.10.6",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "requests>=2.32.3",
]
